--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/ragav7332/26_react_router ",
   "name": "26_react_router",
   "version": "0.1.0",
   "private": true,
